// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Love Camden Conway Hall retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.conwayhall.org.uk/whats-on/event/ghibli-and-goodness/",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793212200000,
      },
    ],
    "showingId": "lovecamden.org-ethical-matters-ghibli-and-goodness-aa520309",
    "title": "Ethical Matters: Ghibli and Goodness",
    "url": "https://www.lovecamden.org/whats-on/ethical-matters-ghibli-and-goodness-aa520309",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.conwayhall.org.uk/whats-on/event/can-fear-be-moral/",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1793385000000,
      },
    ],
    "showingId": "lovecamden.org-thinking-in-frames-can-fear-be-moral-3bf55407",
    "title": "Thinking in Frames: Can Fear be Moral?",
    "url": "https://www.lovecamden.org/whats-on/thinking-in-frames-can-fear-be-moral-3bf55407",
  },
]
`;

exports[`Love Camden Swiss Cottage Library retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.lovecamden.org/whats-on/film-screening-mama-sheila-s-montage-c1a37d35",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792602000000,
      },
    ],
    "showingId": "lovecamden.org-film-screening-mama-sheila-s-montage-c1a37d35",
    "title": "Film Screening: Mama Sheila's Montage",
    "url": "https://www.lovecamden.org/whats-on/film-screening-mama-sheila-s-montage-c1a37d35",
  },
]
`;
